<resources>
    <string name="appNAME">TodoList</string>
    <string name="SettingsTASK">Settings</string>
    <string name="addTASK">Add Task</string>
    <string name="saveTASK">Save Task</string>
    <string name="editTASK">Edit Task</string>
    <string name="deleteTASK">Delete Task</string>

    <string name="taskNAME">Task Title:</string>
    <string name="taskEXPDATE">Exp. Date:</string>
    <string name="taskDESCRIPTION">Description:</string>
    <string name="taskPRIORITY">Priority:</string>
    <string name="taskSTATUS">Status:</string>

    <string name="charSize10">Enter max 10 char</string>
    <string name="charSize20">Enter max 20 char</string>
    <string name="charSize30">Enter max 30 char</string>
    <string name="charSize100">Enter max 100 char</string>

    <string name="taskDETAIL">Task Detail</string>

    <string name="saveSUCCESS">Task successfully saved.</string>
    <string name="deleteSUCCESS">Task successfully deleted.</string>

    <string name="deleteWARNING">Are you sure that you want to delete this task?</string>

    <string name="tasknameFAIL">Please enter the task name.</string>
    <string name="deleteFAIL">Error: Failed to delete task.</string>

    <array name="taskPRIORITY">
        <!--<item>Critical</item>-->
        <item>High</item>
        <item>Low</item>
    </array>
    <array name="taskSTATUS">
        <item>Todo</item>
        <item>Completed</item>
    </array>
</resources>
