<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.omerg.todolist.MainActivity"
    tools:showIn="@layout/main_and_toolbar">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_view_right_margin"
                android:text="@string/taskNAME"/>
            <EditText
                android:id="@+id/tasknameEDIT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/charSize20"
                android:maxLength="20"/>
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:background="?android:attr/listDivider"/>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_view_right_margin"
                android:text="@string/taskEXPDATE"/>
            <DatePicker
                android:id="@+id/datePICKER"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:background="?android:attr/listDivider"/>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_view_right_margin"
                android:text="@string/taskDESCRIPTION"/>
            <EditText
                android:id="@+id/descriptionEDIT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:hint="@string/charSize100"
                android:maxLength="100"/>
        </TableRow>
<!--
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:background="?android:attr/listDivider"/>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_view_right_margin"
                android:text="@string/taskPRIORITY"/>
            <Spinner
                android:id="@+id/prioritySPN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:drawSelectorOnTop="false"
                android:entries="@array/taskPRIORITY"/>
        </TableRow>
-->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thickness"
            android:background="?android:attr/listDivider"/>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/text_view_right_margin"
                android:text="@string/taskSTATUS"/>
            <Spinner
                android:id="@+id/statusSPN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:drawSelectorOnTop="false"
                android:entries="@array/taskSTATUS"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>