<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskNAME"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorDBList"/>
            <TextView
                android:id="@+id/tasknameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDBList"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskEXPDATE"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorDBList"/>
            <TextView
                android:id="@+id/expdateID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDBList" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskDESCRIPTION"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorDBList"/>
            <TextView
                android:id="@+id/descriptionID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDBList"/>
        </TableRow>
<!--        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskPRIORITY"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorDBList"/>
            <TextView
                android:id="@+id/priorityID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDBList"/>
        </TableRow>-->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskSTATUS"
                android:paddingRight="@dimen/text_view_right_margin"
                android:textColor="@color/colorDBList"/>
            <TextView
                android:id="@+id/statusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDBList"/>
        </TableRow>
    </TableLayout>
</LinearLayout>